--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="styles/index.css">
     <title>Youtube Api</title>
 </head>
+
 <body>
     <h1>Youtube Api</h1>
     <form>
@@ -16,6 +18,10 @@
     <ul class='results'></ul>
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="scripts/api.js"></script>
+    <script src="scripts/store.js"></script>
+    <script src="scripts/videoList.js"></script>
     <script src="scripts/index.js"></script>
 </body>
+
 </html>
